# trading-metrics

./: .gitignore  README.md  pyproject.toml
tests/: test_calculation_helpers.py  test_metrics.py  test_strategies.py
trading_metrics/: __init__.py  backfill_db.py  metrics.py  momentum.py  stoploss.py  strategies.py
trading_metrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
